--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -6,6 +6,17 @@ html(lang="ko")
 
     body
         header 
+            if fakeUser.loggedIn
+                small Hello #{fakeUser.username}
+
+            nav
+                ul
+                    if fakeUser.loggedIn
+                        li
+                            a(href="/logout") Log Out
+                    else 
+                        li
+                            a(href="/login") Login
             h1=pageTitle
         block content
     include partials/footer.pug
