--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,4 +4,9 @@ extends base.pug
 block content
     h2 Welcome Here you see trending videos
     input(placeholder="What is your name?")
+    ul
+        each video in videos
+            li=video
+        else 
+            li nothing Found.... 
     button send
