--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,4 +2,7 @@ extends base.pug
 
 
 block content
-    h1 EDIT video vdieo 
+    h4 EDIT video vdieo 
+    form (action="")
+        input(placeholder="video title")
+        input(value="Save", type="submit")
