--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,22 +1,11 @@
 doctype html
 html(lang="ko")
-    head    
+    head
         title #{pageTitle} | Wetube
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
-
     body
-        header 
-            if fakeUser.loggedIn
-                small Hello #{fakeUser.username}
-
-            nav
-                ul
-                    if fakeUser.loggedIn
-                        li
-                            a(href="/logout") Log Out
-                    else 
-                        li
-                            a(href="/login") Login
+        header
             h1=pageTitle
-        block content
-    include partials/footer.pug
+        main
+            block content
+    include partials/footer
