--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,12 +1,10 @@
-extends base.pug
-
+extends base
+include mixins/video
 
 block content
     h2 Welcome Here you see trending videos
     input(placeholder="What is your name?")
     ul
-        each video in videos
-            li=video
-        else 
-            li nothing Found.... 
+        each potato in videos
+            +video(potato)
     button send
