--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,4 +2,7 @@ extends base.pug
 
 
 block content
-    h1 Watch Watch WWWW Video!
+    h3 #{video.views} #{video.views === 1 ? "view" : "views"} 
+    a(href=`${video.id}/edit`) Edit Video &rarr;
+
+    
